--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-simple-spinner": "^1.2.8",
     "vuejs-paginate": "^1.9.0",
     "vuex": "^3.0.1"
   },
